# decentralized-voting-app

./: .gitignore  deploy_contract.sh  services.sh  wallets.txt
decryption-service/: .gitignore  package-lock.json  package.json  test-crypto-flow.js
decryption-service/src/: contract-integration.js  contract.js  crypto-storage.js  crypto.js  logger.js  server.js  zkp.js
dkg-service/: .gitignore  IMPLEMENTATION.md  README.md  package-lock.json  package.json
dkg-service/public/: index.html
dkg-service/src/: dkg-ceremony.js  e2e-homomorphic-voting-test.js  elgamal-crypto.js  homomorphic-tally.js  paillier.js  server.js  storage.js  test-dkg.js  threshold-crypto.js  vote-encoder.js  vote-encoding.js  zkp-decryption.js
vote-relayer/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
vote-relayer/src/: generate-wallet.js  init-account.js  monitor.js  relayer.js  server.js
voting-app/: Cargo.toml
voting-app/meta/: Cargo.toml
voting-app/meta/src/: main.rs
voting-app/output/: voting-app.abi.json  voting-app.imports.json  voting-app.mxsc.json  voting-app.wasm
voting-app/scenarios/: voting_app.scen.json
voting-app/src/: voting_app.rs
voting-app/tests/: voting_app_scenario_go_test.rs  voting_app_scenario_rs_test.rs
voting-app/wasm/: Cargo.toml
voting-app/wasm/src/: lib.rs
voting-frontend/: config.ts  next.config.ts  package.json  pnpm-lock.yaml  test-elgamal.js
voting-frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
voting-frontend/components/: AddVotersModal.tsx  CreateElectionForm.tsx  ElectionCard.tsx  (+10 more)
(+17 files in other folders)
